🐛FIX: .text--h2 styling on mobile

--- a/src/styles/_typefaces.scss
+++ b/src/styles/_typefaces.scss
@@ -198,7 +198,7 @@ h2, .text--h2 {
         font-size: 2.7rem;
     }
 
-    h2 {
+    h2, .text--h2 {
         font-size: 1rem;
         line-height: 1.2rem;
     }
